--- a/README.adoc
+++ b/README.adoc
@@ -10,6 +10,8 @@ Marco Herrn <marco@mherrn.de>
 
 **K**een **I**18n **L**10n and **T**9n
 
+Create an XLS(X) sheet from Java localization resource bundles and vice versa.
+
 image:docs/kilt-icon.svg[Kilt - **K**een **I**18n, **L**10n and **T**9n,
 width=100]
 
@@ -103,7 +105,7 @@ the pom or your project:
   <build>  
 ----
 
-See link::docs/user_guide.adoc[the Kilt User Guide] for a 
+See link:docs/user_guide.adoc[the Kilt User Guide] for a 
 detailed description of the available goals and configuration parameters.
 
 === Ant task
