--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@ Marco Herrn <marco@mherrn.de>
 :toc:
 :homepage: https://github.com/hupfdule/kilt
 :download-page: https://github.com/hupfdule/kilt/releases
-:license-link: ./LICENSE-2.0.html
+:license-link: ./LICENSE.txt
 :kilt-version: 0.3.0
 
 [.float-group]
