--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -10,7 +10,7 @@ Marco Herrn <marco@mherrn.de>
 :homepage: https://github.com/hupfdule/kilt
 :download-page: https://github.com/hupfdule/kilt/releases
 :javadoc-url: https://somewhere.else
-:license-link: ../LICENSE-2.0.html
+:license-link: ../LICENSE.txt
 :kilt-version: 0.3.0
 
 User Guide for Kilt (**K**een **I**18n **L**10n and **I**9n) 
